--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,8 @@
 </head>
 <body>
 
- 		<%= render partial: "elements/navbar" %>
-		<%= bootstrap_flash %>
+<!--  		<%= render partial: "elements/navbar" %>
+ -->		<%= bootstrap_flash %>
 		<%= yield %>
 		<%= render 'elements/footer' %>
 
