--- a/app/views/competitions/show.html.erb
+++ b/app/views/competitions/show.html.erb
@@ -1,16 +1,27 @@
-<div class="center">
- 
-	<div class="jumbotron">
-	<h1><%= title "#{@competition.name}" %></h1>
-	</div>
+<section class="videocontainer bg-grey section">
+	    <div class="container-fluid position-relative">            
+	        <h1 class="text-center color-green txt-regular col-md-4 col-md-offset-4"><%= title "#{@competition.name}" %></h1>
+	        <!-- <div class="filterbox col-md-2 col-md-offset-2">
+	            <select class="filter">
+	                <option value="">Filter by</option>
+	                <option value="option1">Option1</option>
+	                <option value="option2">Option2</option>
+	                <option value="option3">Option3</option>
+	            </select>
+	        </div> -->
+	        <div class="clear mar-bot30"></div>
+	        <div id="goals" class="masonry clearfix">
+				<%= render @goals.order(:date).reverse_order %>
+			</div>
 
+	<div class="clear mar-bot50"></div>
+         <div class="align-center paginator">
 
-
-	<div id="goals" class="masonry clearfix">
-		<%= render @goals.order(:date).reverse_order %>
-	</div>
-
-	<div class="paginator">
-  	<%= will_paginate @goals, renderer: BootstrapPagination::Rails %>
+  	<%= will_paginate @goals %>
 	</div>
 </div>
+
+
+<% title 'Teams' %>
+<% description 'Check out the highlights for your favorite teams, including every goal from the 2014 World Cup.' %>
+<% keywords 'World Cup, Premier League, La Liga, Cups, Leagues, Highlights, gifs, Gfycat, soccer, football, goals, goal, Liverpool, Barcelona, Real Madrid, Manchester United, Chelsea, Arsenal' %>
