--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,25 +1,30 @@
-<div class="center">
- 
+<section class="videocontainer bg-grey section">
+      <div class="container-fluid position-relative">            
+          <% if @query.blank? %>
+            <h1 class="text-center color-green txt-regular col-md-4 col-md-offset-4"><%= title "Search Your Favorite Teams and Players" %></h1>
+          <% else %>
+            <h1 class="text-center color-green txt-regular col-md-4 col-md-offset-4"><%= title "Seach results for #{@query}" %></h1>
+          <% end %>
+          <!-- <div class="filterbox col-md-2 col-md-offset-2">
+              <select class="filter">
+                  <option value="">Filter by</option>
+                  <option value="option1">Option1</option>
+                  <option value="option2">Option2</option>
+                  <option value="option3">Option3</option>
+              </select>
+          </div> -->
+          <div class="clear mar-bot30"></div>
+          <div id="goals" class="masonry clearfix">
+        <%= render @goals %>
+      </div>
 
-  <div class="jumbotron">
+  <div class="clear mar-bot50"></div>
+         <div class="align-center paginator">
 
-  <% if @query.blank? %>
-    <h1><%= title "Search Your Favorite Teams and Players" %></h1>
-  <% else %>
-    <h1><%= title "Seach results for #{@query}" %></h1>
-  <% end %>
+    <%= will_paginate @goals %>
   </div>
-
-  <div id="goals" class="masonry clearfix">
-    <%= render @goals %>
-  </div>
-
-  <div class="paginator">
-    <%= will_paginate @goals, renderer: BootstrapPagination::Rails %>
-  </div>
-  </div>
-
 </div>
+
 
 
 <% set_meta_tags :description => "Welcome to Goalopedia! Our mission is to document every goal caught on tape, help us make Goalopedia the best resource for goals possible!",
