--- a/app/views/teams/club.html.erb
+++ b/app/views/teams/club.html.erb
@@ -1,24 +1,35 @@
-<div class="jumbotron">
-<h1>Find Your Favorite Club Teams</h1>
-</div>
-<div id="goals" class="masonry clearfix">
-
-	<%= render @teams %>
-	<div class="compBox box">
-		<h2><%= link_to "Can't Find it? Add Your Favorite Team", new_user_registration_path %></h2>
-		<div class="gfySize">
-				<div class="gfyitem" data-title=false data-autoplay=true data-controls=false data-expand=false data-id="HappyNecessaryBernesemountaindog"></div>
-		</div>
-
+<section class="videocontainer bg-grey section">
+	    <div class="container-fluid position-relative">            
+	        <h1 class="text-center color-green txt-regular col-md-4 col-md-offset-4">Find Your Favorite Club Teams</h1>
+	        <!-- <div class="filterbox col-md-2 col-md-offset-2">
+	            <select class="filter">
+	                <option value="">Filter by</option>
+	                <option value="option1">Option1</option>
+	                <option value="option2">Option2</option>
+	                <option value="option3">Option3</option>
+	            </select>
+	        </div> -->
+	        <div class="clear mar-bot30"></div>
+	        <div id="goals" class="masonry clearfix">
+				<%= render @teams %>
+				<div class="goal box">
+	    <div class="gfySize">
+			<div class="gfyitem" data-title=false data-autoplay=true data-controls=false data-expand=false data-id="HappyNecessaryBernesemountaindog"></div>
+	    </div>
+	    <h2>
+			<%= link_to "Can't Find it? Add Your Favorite Team", new_user_registration_path %>
+		</h2>
 	</div>
+			</div>
 
+	<div class="clear mar-bot50"></div>
+         <div class="align-center paginator">
+
+  	<%= will_paginate @goals %>
+	</div>
 </div>
 
-<div class="paginator">
-  	<%= will_paginate @teams, renderer: BootstrapPagination::Rails %>
-</div>
 
-
-<% title 'Teams' %>
+<% title 'Club Teams' %>
 <% description 'Check out the highlights for your favorite teams, including every goal from the 2014 World Cup.' %>
 <% keywords 'World Cup, Premier League, La Liga, Cups, Leagues, Highlights, gifs, Gfycat, soccer, football, goals, goal, Liverpool, Barcelona, Real Madrid, Manchester United, Chelsea, Arsenal' %>
