--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,33 @@
-<% if defined?(Devise) %>
+
+
+<section class="videocontainer bg-grey section">
+	    <div class="container-fluid position-relative">            
+	        <% if defined?(Devise) %>
         <% if current_user %>
-			<div class="jumbotron">
-				<h1>Hello <%= @user.username %>!</h1>
+	        <h1 class="text-center color-green txt-regular col-md-4 col-md-offset-4">Hello <%= @user.username %>!</h1>
 			</div>
         <% else %>
-        	<div class="jumbotron">
-  				<h1>User Profile: <%= @user.username %></h1>
-			</div>
+  				<h1 class="text-center color-green txt-regular col-md-4 col-md-offset-4">User Profile: <%= @user.username %></h1>
         <% end %>
 <% end %>
+	        <!-- <div class="filterbox col-md-2 col-md-offset-2">
+	            <select class="filter">
+	                <option value="">Filter by</option>
+	                <option value="option1">Option1</option>
+	                <option value="option2">Option2</option>
+	                <option value="option3">Option3</option>
+	            </select>
+	        </div> -->
+	        <div class="clear mar-bot30"></div>
+	        <div id="goals" class="masonry clearfix">
+				<%= render @goals.order(:date).reverse_order %>
+			</div>
 
-<div id="goals" class="masonry clearfix">
-		<%= render @goals.order(:created_at).reverse_order %>
+	<div class="clear mar-bot50"></div>
+         <div class="align-center paginator">
+
+  	<%= will_paginate @goals %>
 	</div>
-
-	<div class="paginator">
-  	<%= will_paginate @goals, renderer: BootstrapPagination::Rails %>
 	</div>
 
 
