--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,8 +1,11 @@
 <%- model_class = Goal -%>
-<div class="jumbotron">
-  <h1><%= title "New Goal" %></h1>
-</div>
-<div class="textMargin">
+
+<section class="videocontainer bg-grey page-section">
+    <div class="container position-relative">   
+
+    <h1 class="text-center color-green txt-regular align-center"><%= title "New Goal" %></h1>
 
 <%= render :partial => 'form' %>
-</div>
+
+    </div>
+</section>
