--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,10 @@
 </head>
 <body>
 
-<!--  		<%= render partial: "elements/navbar" %>
- -->		<%= bootstrap_flash %>
-		<%= yield %>
-		<%= render 'elements/footer' %>
+	<%= render partial: "elements/navbar" %>
+	<%= bootstrap_flash %>
+	<%= yield %>
+	<%= render 'elements/footer' %>
 
 </body>
 </html>
