--- a/app/views/statics/contact.html.erb
+++ b/app/views/statics/contact.html.erb
@@ -1,15 +1,15 @@
 <% set_meta_tags :description => "Welcome to Goalopedia! Please contact us to make our site better",
                  :keywords => "contact, goalopedia, goals, create, help, score, soccer, football" %>
 
-<div class="jumbotron">
-  <h1><%= title "Contact Us" %></h1>
+<section class="videocontainer bg-grey page-section">
+    <div class="container position-relative">
+	<h1 class="text-center color-green txt-regular align-center"><%= title "Contact Us" %></h1>
 
 
-</div>
 
-<div class="textMargin">
 
 
 <p>Our website is currently under development, so please <a href="mailto:info@goalopedia.com" target="_blank">contact us</a> with suggestions on how to make Goalopedia a better place.</p>
 
 </div>
+</section>
