--- a/app/views/statics/upload.html.erb
+++ b/app/views/statics/upload.html.erb
@@ -1,8 +1,7 @@
-<div class="jumbotron">
-<h1>Admin Page</h1>
-</div>
+<section class="videocontainer bg-grey page-section">
+    <div class="container position-relative">
+	<h1 class="text-center color-green txt-regular align-center">Admin Page</h1>
 
-<div class="textMargin">
 	<div class="adminBox">
 		<h2>Upload/Download Goals Goals</h2>
 		<h3>Admin Only</h3>
@@ -35,4 +34,8 @@
 		<% end %>
 	</ul>
 	</div>
-</div>
+
+
+
+    </div>
+</section>
