--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,17 @@
-<div class="jumbotron">
-  <h1><%= title "Sign Up" %></h1>
-</div>
+<section class="videocontainer bg-grey page-section">
+    <div class="container position-relative">     
+
+
+
+  <h1 class="text-center color-green txt-regular align-center"><%= title "Sign Up" %></h1>
 
 
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-horizontal form-user"}) do |f| %>
   <%= devise_error_messages! %>
 
-  
+<div class="goal box form">
+
   <div class="form-group">
     <%= f.label :username, class: "control-label col-md-4" %>
     <div class="col-md-8">
@@ -55,6 +59,8 @@
       <%= render "devise/shared/links" %>
     </div>
   </div>
+</div>
 
 <% end %>
-
+    </div>
+</section>
