--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -48,7 +48,7 @@
               </div>
             </div>
             </div>
-<div class="col-md-8">
+<div class="col-md-8 buttonRow">
   <%= link_to "Incorrect info?", edit_goal_path(@goal), :class => '' %>
 <% if user_signed_in? && current_user.admin?  %>
     <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
