--- a/app/views/statics/about.html.erb
+++ b/app/views/statics/about.html.erb
@@ -1,16 +1,14 @@
 <% set_meta_tags :description => "Welcome to Goalopedia! Our mission is to document every goal caught on tape! Help us make Goalopedia the best resource for goals possible!",
                  :keywords => "contact, goalopedia, goals, create, help, score, soccer, football" %>
 
-<div class="jumbotron">
-<h1><%= title "About Goalopedia" %></h1>
-</div>
+<section class="videocontainer bg-grey page-section">
+    <div class="container position-relative">
+	<h1 class="text-center color-green txt-regular align-center"><%= title "About Goalopedia" %></h1>
 
-<div class="textMargin">
 
-<p>Our mission is to document every goal caught on tape! Help us make Goalopedia the best resource for goals possible!</p>
-
-<p>Our website is currently under development, so please <a href="mailto:info@goalopedia.com" target="_blank">contact us</a> with suggestions on how to make Goalopedia a better place.</p>
+<p>Our mission is to document every goal caught on tape! Help us make Goalopedia the best resource for goals possible! Our website is currently under development, so please <a href="mailto:info@goalopedia.com" target="_blank">contact us</a> with suggestions on how to make Goalopedia a better place.</p>
 
 <p>In the meantime, please sign up and help <%= link_to "help us find more goals", new_goal_path %>.</p>
 
 </div>
+</section>
