--- a/app/views/statics/dmca.html.erb
+++ b/app/views/statics/dmca.html.erb
@@ -1,7 +1,7 @@
-
-<div class="textMargin">
-
-	  <h1><%= title "DMCA" %></h1>
+<section class="videocontainer bg-grey page-section">
+    <div class="container position-relative">
+	<h1 class="text-center color-green txt-regular align-center"><%= title "DMCA" %></h1>
 
 	<p>All content found on Goalopedia is not hosted on our servers and is not created by us. Goalopedia is a place where users post third-party hyperlinks, we are not responsible for the content or actions of any third party website or services associated with the links posted. We are simply a compiling platform where users place their favorite content from around the web. Goalopedia is not responsible for the content of these external websites. If you find that some of the content violates your property, please request for that content to be brought down at the host that is responsible for the content. That will ensure that the content is removed from our site and other similar compilation platforms around the internet. For more information contact us <a href="mailto:info@goalopedia.com" target="_blank">here</a>.</p>
 </div>
+</section>
