--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,19 +5,23 @@
 	        <% if defined?(Devise) %>
         <% if current_user %>
 	        <h1 class="text-center color-green txt-regular col-md-4 col-md-offset-4">Hello <%= @user.username %>!</h1>
-			</div>
+			
         <% else %>
   				<h1 class="text-center color-green txt-regular col-md-4 col-md-offset-4">User Profile: <%= @user.username %></h1>
         <% end %>
 <% end %>
-	        <!-- <div class="filterbox col-md-2 col-md-offset-2">
-	            <select class="filter">
-	                <option value="">Filter by</option>
-	                <option value="option1">Option1</option>
-	                <option value="option2">Option2</option>
-	                <option value="option3">Option3</option>
-	            </select>
-	        </div> -->
+	        <div class="filterbox col-md-2 col-md-offset-2">
+	            <div class="btn-group">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                  Account <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                  <li><%= link_to "Edit Account", edit_user_registration_path %></li>
+                  <li class="divider"></li>
+                  <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+                </ul>
+            </div>
+	        </div>
 	        <div class="clear mar-bot30"></div>
 	        <div id="goals" class="masonry clearfix">
 				<%= render @goals.order(:date).reverse_order %>
