--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -42,8 +42,7 @@
                         <p class="color-grey font-size12"><%= link_to "Posted by #{@goal.user.username}", user_url(@goal.user) %><a href="http://gfycat.com/" class="att"> via Gfycat.com</a></p>
                     </div>
                     <div class="width-50per float-right align-right">
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-size="large" data-related="goalopedia" data-hashtags="goalopedia">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                      <div class="addthis_sharing_toolbox"></div>
                     </div>
               </div>
             </div>
